[package]
name = "TheOldRepublic"
version = "0.1.0"
authors = ["Scott Manifold <shm.qed@gmail.com>"]

[lib]
name = "httk"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/bin_client.rs"

[[bin]]
name = "server"
path = "src/bin_server.rs"

[dependencies]
# Network dependencies
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"

# Graphics dependencies
piston = "0.33.0"
piston_window = "0.61.0"
piston2d-graphics = "0.21.1"
pistoncore-glutin_window = "0.39.0"
piston2d-opengl_graphics = "0.46.0"
